# ramjet

./: .dockerignore  .gitignore  .pdm-python  .pylintrc  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  constraints.txt  index.html  mkdocs.yml  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini  webpack.config.js
.deploy/: nginx.conf  supervisor.conf
.github/instructions/: laisky.instructions.md
.github/workflows/: ci.yml
.scripts/: generate_changelog.sh  update_readme_version.py
CHANGELOG/: index.html
docs/: CHANGELOG.md  conf.py  index.md  index.rst  versions.md
docs/ref/: pdm.md
mkdocs/: search_index.json
ramjet/: .babelrc  __main__.py  app.py  engines.py  patterns.py  settings.py
ramjet/libs/: __init__.py  exceptions.py
ramjet/models/: __init__.py  __main__.py  base.py  mongo_dbs.py  mysql_dbs.py
ramjet/settings/: __init__.py  base.py
ramjet/tasks/: __init__.py  email_proxy.py  heart.py  keyword.py  test.py  web_demo.py  webapps.py  webdemo.py
ramjet/tasks/aws/: __init__.py  rekognition.py
ramjet/tasks/converter/: router.py
ramjet/tasks/dlp/: image_watermark.py  image_watermark_doc.html  image_watermark_verify.html  router.py
ramjet/tasks/gptchat/: __init__.py  auth.py  base.py  router.py  utils.py
ramjet/tasks/gptchat/embedding/: __init__.py  azure.py  data.py  embeddings.py  query.py
ramjet/tasks/gptchat/llm/: __init__.py  base.py  data.py  embeddings.py  image.py  query.py  scan.py
ramjet/tasks/gptchat/tts/: __init__.py  azure.py  base.py  test_azure.py
ramjet/tasks/monitors/: __init__.py  base.py  ssl_cert.py
ramjet/tasks/sensitive_words/: index.tpl
ramjet/tasks/static/: index.tpl.html
ramjet/tasks/telegram/: __init__.py  db.py  notes.py
ramjet/tasks/templates/: base.html  test.html
ramjet/tasks/templates/converter/: index.html  mongo_id.html
ramjet/tasks/templates/dlp/: image_watermark_doc.html  image_watermark_verify.html
ramjet/tasks/templates/twitter/: index.html  login.html  search.html  tweet.html
ramjet/tasks/templates/upload/: proto.html
ramjet/tasks/twitter/: __init__.py  __main__.py  base.py  crawler.py  display.py  index.html  login.html  login.py  move_files.py  replace_url.py  router.py  s3.py  search.html  tweet.html
ramjet/tasks/twitter/tests/: test_base.py
ramjet/tasks/upload/: __init__.py  views.py
ramjet/utils/: __init__.py  aiohttp.py  cache.py  common.py  db.py  encrypt.py  jinja.py  log.py  mail.py
src/ramjet/: __main__.py  engine.py  settings.py
src/ramjet/tasks/: __init__.py  heart.py
src/ramjet/tasks/snmp/: __init__.py  bs_hosts.yml  jq_hosts.yml  main.py  monitor.py
src/ramjet/tasks/sync_projects/: main.py
src/ramjet/utils/: __init__.py  jinja.py
src/ramjet/views/: __init__.py  base.py
tests/: test_chunk_preview.py  test_packaging_metadata.py  test_snmp.py  test_vector_store.py
(+6 files in other folders)
