[build-system]
requires = ["pdm-backend>=2.4.0"]
build-backend = "pdm.backend"

[project]
name = "ramjet"
dynamic = ["version"]
description = "Scripts Manager"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Laisky", email = "ppcelery@gmail.com" },
]
keywords = ["aiohttp", "trigger", "utils"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
]
license-files = ["LICENSE"]
dependencies = [
  "aiographql-client>=1.0.3a2",
  "aiohttp>=3.9.4",
  "aiohttp-jinja2>=1.5.1",
  "aiohttp-session>=2.12.0",
  "azure-cognitiveservices-speech~=1.38",
  "bcrypt>=3.1.7",
  "beautifulsoup4>=4.12.2",
  "black",
  "boto3>=1.28.48",
  "cachetools>=5.3.0",
  "certifi>=2024.7.4",
  "dateparser>=1.1.6",
  "docutils>=0.18.1",
  "docx2txt>=0.8",
  "faiss-cpu>=1.7.4",
  "flake8",
  "future>=0.18.3",
  "humanize>=3.12.0",
  "idna>=3.7",
  "jieba>=0.39",
  "Jinja2>=3.1.3",
  "jmespath>=0.10.0",
  "kipp>=0.2.11",
  "langchain>=0.1.9",
  "langchain-community>=0.0.24",
  "langchain_openai>=0.0.7",
  "lxml>=4.9.2",
  "maya>=0.6.1",
  "minio>=7.1.16",
  "multidict>=5.2.0",
  "mypy",
  "mypy-extensions>=0.4.3",
  "numpy>=1.24.3",
  "oauthlib>=3.2.2",
  "openai>=1.12.0",
  "openapi-schema-pydantic>=1.2.4",
  "pdfplumber>=0.10.4",
  # pinned by Snyk to avoid a vulnerability
  "pillow>=10.0.1",
  "pypdf>=4.0.2",
  "PyJWT>=2.4.0",
  "pymongo>=4.3.3",
  # for github action arm
  "PyYAML>=5.4.1",
  "python-dateutil>=2.8.2",
  "pycryptodome>=3.19.1",
  "requests>=2.32.0",
  "requests-oauthlib>=1.3.0",
  # pinned by Snyk to avoid a vulnerability
  "setuptools>=65.5.1",
  "six>=1.16.0",
  "sqlalchemy>=2.0.27",
  "tornado>=6.3.3",
  "tqdm>=4.65.0",
  "tweepy>=4.14.0",
  "types-pytz>=2023.3.1.0",
  "tzdata>=2021.5",
  "xxhash>=1.4.4",
]

[project.optional-dependencies]
doc = [
  "sphinx",
  "recommonmark",
  "sphinxcontrib-napoleon",
]
test = ["pytest", "mock", "tomli>=2.0.1"]
all = [
  "mock",
  "pytest",
  "tomli>=2.0.1",
  "recommonmark",
  "sphinx",
  "sphinxcontrib-napoleon",
]

[project.scripts]
ramjet = "ramjet.__main__:main"

[project.urls]
Homepage = "https://github.com/Laisky/ramjet"
Repository = "https://github.com/Laisky/ramjet"
"Bug Tracker" = "https://github.com/Laisky/ramjet/issues"

[tool.pdm.scripts]
update-readme-version = { cmd = "python ./.scripts/update_readme_version.py" }

[tool.pdm.version]
source = "file"
path = "ramjet/__init__.py"

[tool.pdm.build]
includes = [
  "ramjet",
  "requirements.txt",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "Makefile",
  "tox.ini",
]
excludes = [
  "ramjet/settings/prd.py",
]
